# ProspectForge

./: .dockerignore  .env.example  .env.production.example  .gitignore  ANTIGRAVITY_PROSPECTFORGE_LEVEL_300_IMPLEMENTATION_PROMPT.md  ANTIGRAVITY_PROSPECTFORGE_MASTER_EXECUTION_PROMPT.md  ANTIGRAVITY_PROSPECTFORGE_REPOSITORY_AWARE_V4_MASTER_PROMPT.md  DEPLOY.md  Dockerfile  GUIDE.md  PROSPECTFORGE_V3_CLIENT_ACQUISITION_REBUILD_MASTER_SPEC.md  README.md  audit_vps.py  check_db.py  check_domains.py  check_freewings.py  check_freewings_assets.py  check_freewings_env.py  check_freewings_logs.py  check_js.py  check_login.py  check_logs.py  check_nginx.py  check_nginx_config.py  check_php.py  check_state.py  check_vps.py  cleanup_vps.py  deploy_ssh.py  docker-compose.yml  find_freewings.py  fix_freewings.py  fix_vps.py  get_logs.py  get_logs2.py  logic_specification.txt  package-lock.json  package.json  pyproject.toml  restart_php.py  (+7 more)
acceptance/: baseline-data-model.md  baseline-defect-register.md  baseline-route-matrix.md  baseline-runtime-topology.md
alembic/: env.py
app/: __init__.py  auth.py  commercial.py  config.py  database.py  main.py  messaging.py  models.py  schemas.py  scoring.py  scoring_v3.py  security.py  services.py
deploy/: Caddyfile  Caddyfile.acme  Caddyfile.external  Caddyfile.internal
scripts/: backfill_phase3.py  backup-host.sh  backup.sh  configure-production.sh  deploy.sh  entrypoint.sh  ingest_cohort.py  init_db.py  release-gate.sh  restore.sh  rollback.sh  seed_10k_benchmark.py  simulate_pilot.py  smoke-production.sh  vps-update.sh
(+184 files in other folders)
