[project]
name = "prospectforge"
version = "3.0.0"
description = "Client Acquisition OS — DECP discovery, scoring, outreach tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0,<0.22",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "httpx>=0.28.0",
    "dnspython>=2.7.0,<3",
    "phonenumbers>=8.13.0,<9",
    "pypdf>=5.0.0,<6",
    "pandas>=2.2.0",
    "polars>=1.17.0",
    "pyarrow>=18.0.0",
    "jinja2>=3.1.4",
    "apscheduler>=3.10.4",
    "itsdangerous>=2.2.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
